# shen-nong

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE
app/: Cargo.toml
app/src/: main.rs
design/docs/: readme.md  农作物种植智能管理系统产品需求说明书.md  神农开心农场原型设计说明书.md
design/客户端/: farm.html  header.html  home.html  index.html  login.html  market.html  profile.html  register.html
design/服务端/: crops-management.html  dashboard.html  (+13 more)
server/: Cargo.toml  config.toml  diesel.toml
server/assets/: admin_menu.css  dash_board.css  main.css  user.css
server/migrations/: 0001_initial.sql
server/migrations/2025-10-31-091605-0000_create_premission/: up.sql
server/src/: main.rs  main_bck_01.rs
server/src/backend/: db.rs  lib.rs  schema.rs
server/src/backend/config/: config.rs  database.rs
server/src/backend/controllers/: permission_controller.rs
server/src/backend/middleware/: permission_middleware.rs
server/src/backend/models/: permission.rs
server/src/backend/services/: permission_service.rs
server/src/components/: admin_menu.rs  dash_board.rs  header.rs  header_layout.rs  mod.rs  user.rs
server/src/components/biz/: inventory.rs  mod.rs  orders.rs  products.rs
server/src/components/common/: bread_crumb.rs  elements.rs  mod.rs  pages.rs
server/src/components/dashboard/: dashboard.rs  data_analysis.rs  mod.rs  real_time_monitor.rs
server/src/components/farmers/: crops.rs  devices.rs  farmers.rs  mod.rs
server/src/components/system/: basic.rs  log.rs  mod.rs  security.rs
server/src/components/users/: mod.rs  permission.rs  role.rs  user.rs
src/: main.rs
(+2 files in other folders)
