[package]
name = "shen-nong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]
