[package]
name = "shen-nong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.3.3", features = ["mysql", "r2d2"] }
diesel_migrations = "2.3.0"
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
web = ["dioxus/web"]

[profile]
