[package]
name = "shen-nong-server"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.3.3", features = ["mysql", "r2d2"], optional = true }
diesel_migrations = "2.1.0"
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dep:diesel", "dioxus/server"]
web = ["dioxus/web"]

[profile]
[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
